<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/testView0"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/roomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/myView" />

    <TextView
        android:id="@+id/myItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/myThings" >

        <requestFocus />
    </TextView>

    <Button
        android:id="@+id/goUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/up"
        android:layout_gravity="right" />

    <Button
        android:id="@+id/goDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/down"
        android:layout_gravity="right" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/north"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/east" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/west"
        android:layout_gravity="right" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/south"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/grab"
        android:layout_gravity="right" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:text="@string/drop" />

</LinearLayout>